[package]
name = "quic_forwarder"
version = "0.1.0"
authors = ["Franco Liberali <franco.liberali@gmail.com>"]
edition = "2018"
publish = false

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["quiche/fuzzing"]

# Enable qlog support.
qlog = ["quiche/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["quiche/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["quiche/sfv"]

default = ["qlog", "sfv"]

[dependencies]
docopt = "1"
env_logger = "0.6"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "1"
log = "0.4"
ring = "0.16"
# quiche = { path = "../quiche/quiche" }
# quiche = { git = "https://github.com/cloudflare/quiche" }
quiche = { git = "https://github.com/qdeconinck/quiche", branch = "multipath"}
libc = "0.2"
nix = "0"
slab = "0.4"
itertools = "0.10"
rand = "0.8.3"

[lib]
crate-type = ["lib"]
